fixed font-size on mobile

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -114,7 +114,7 @@ a:hover, .text-content a:visited {
 
   {
 	body {
-		font-size: 36pt;
+		font-size: 24px;
 		margin: 10%;
 	}
 
